--- a/src/index.pug
+++ b/src/index.pug
@@ -41,7 +41,8 @@ html(lang="en")
           {id: 'child', title: 'Дети', defaultValue: 2},
           {id: 'mlad', title: 'Младенцы'},
         ],
-        width: '250px'
+        width: '250px',
+        control: true
       }
     )
     br
