commit dropdown control

--- a/src/dropdown/__control/dropdown__control.pug
+++ b/src/dropdown/__control/dropdown__control.pug
@@ -1,4 +1,4 @@
 mixin dropdown__control(idDropdown)
   .dropdown__control(id= idDropdown + 'Control')
-    div.dropdown__control-button(id= idDropdown + 'Clear' class= 'dropdown__control-button_clear') Очистить
+    div.dropdown__control-button(id= idDropdown + 'Clear' class= 'dropdown__control-button_clear dropdown__control-button_clear_disabled') Очистить
     div.dropdown__control-button(id= idDropdown + 'Apply' class= 'dropdown__control-button_apply') Применить
