--- a/src/dropdown/__control/dropdown__control.scss
+++ b/src/dropdown/__control/dropdown__control.scss
@@ -22,4 +22,10 @@
     &_clear { color: rgba(31, 32, 65, 0.5); }
     &_clear_disabled { visibility: hidden; }
   }
+  &_noneVisibility {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    visibility: hidden;
+  }
 }
