--- a/src/index.pug
+++ b/src/index.pug
@@ -17,7 +17,8 @@ html(lang="en")
     +text-field({placeholder: 'Phone', type: 'password'})
     hr
     div
-      button(id='getDropdown') Get value Dropdown
+      button(id='getDropdownRoom') Get value Dropdown
+      button(id='getDropdownGuest') Get value Dropdown
     br
     +dropdown(
       { 
@@ -27,7 +28,8 @@ html(lang="en")
           {id: 'bedrooms', title: 'Спальни'},
           {id: 'beds', title: 'Кровати'},
           {id: 'bathrooms', title: 'Ванные комнаты'},
-        ],
+        ]
+
       }
     )
     br
@@ -41,8 +43,8 @@ html(lang="en")
           {id: 'child', title: 'Дети', defaultValue: 2},
           {id: 'mlad', title: 'Младенцы'},
         ],
-        width: '250px',
-        control: true
+        width: '250px'
+
       }
     )
     br
