--- a/src/dropdown/dropdown.scss
+++ b/src/dropdown/dropdown.scss
@@ -4,6 +4,17 @@
   border-radius: 2px 2px 0px 0px;
   box-sizing: border-box;
   outline: none;
+  &__name {
+    display: inline-block;
+    padding-bottom: 5px;
+    text-transform: uppercase;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    color: #1F2041;
+  }
   &__box {
     position: relative;
     display: flex;
@@ -40,6 +51,8 @@
     justify-content: center;
     align-items: center;
     width: 42.5px;
+    min-width: 30px;
+    max-width: 30px;
     height: 42px;
     &:hover {
       background-color: lightblue;
