--- a/src/index.pug
+++ b/src/index.pug
@@ -20,7 +20,7 @@ html(lang="en")
       button(id='getDropdownRoom') Get value Dropdown
       button(id='getDropdownGuest') Get value Dropdown
     br
-    +dropdown(
+    +dropdown('dropdown',
       { 
         id: 'propsRoom',
         type: 'props',
@@ -34,7 +34,7 @@ html(lang="en")
     )
     br
     hr
-    +dropdown(
+    +dropdown('Будут ли гости',
       { 
         id: 'propsGuest',
         type: 'props',
@@ -43,7 +43,7 @@ html(lang="en")
           {id: 'child', title: 'Дети', defaultValue: 2},
           {id: 'mlad', title: 'Младенцы'},
         ],
-        width: '250px'
+        width: '400px'
 
       }
     )
