--- a/src/index.pug
+++ b/src/index.pug
@@ -7,6 +7,16 @@ html(lang="en")
     include index-components.pug
   body
     h1 Webpack and pug
+    br
+    hr
+    +dropdown('date',
+      {
+        id: 'propsDate',
+        type: 'date',
+        width: '400px'
+      }
+    )
+    hr
     div 
       +toggle({id: 'specOffer', text: 'Получать спецпредложения', isChecked: true})
       +toggle({id: 'specOffer-sec', text: 'Получать спецпредложения'})
@@ -19,13 +29,6 @@ html(lang="en")
     div
       button(id='getDropdownRoom') Get value Dropdown
       button(id='getDropdownGuest') Get value Dropdown
-    br
-    +dropdown('date',
-      {
-        id: 'propsDate',
-        type: 'date'
-      }
-    )
     br
     +dropdown('dropdown',
       { 
