--- a/src/dropdown/__date/dropdown-date__date.scss
+++ b/src/dropdown/__date/dropdown-date__date.scss
@@ -1,22 +1,27 @@
 @import './air-date/css/datepicker.css';
 
-.dropdown__slider {
-  padding-left: 0;
-  padding-right: 0;
+.dropdown__slider-date {
+  min-width: 320px;
+  padding-left: 11px;
+  padding-right: 12px;
+  border-top: 1px solid rgba(31, 32, 65, 0.5);
+}
+
+.dropdown__control-date {
+  padding-right: 8px;
+  padding-top: 16px;
+  padding-bottom: 12px;
 }
 
 .datepicker {
   width: auto;
   max-width: 320px;
   padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
   border: 0;
   box-sizing: border-box;
 
   &--nav {
-    padding-left: 5px;
-    padding-right: 8px;
+    border: 0px;
     &-title {
       font-family: 'Open Sans';
       font-style: normal;
@@ -39,8 +44,38 @@
       }
     }
   }
+
+  &--content {
+    padding: 4px 10px;
+    padding-right: 8px;
+    padding-top: 27px;
+  }
+
+  &--day-name {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    color: #BC9CFF;
+    text-transform: capitalize;
+  }
+
+  &--cells {
+    margin-top: 12px;
+  }
   &--cell {
+    padding-top: 20px;
+    padding-bottom: 20px;
     border-radius: 50px;
+
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+
+    color: rgba(31, 32, 65, 0.5);
   }
 
 }
