Complite build date & dateRange dropdown

--- a/src/dropdown/dropdown.pug
+++ b/src/dropdown/dropdown.pug
@@ -16,5 +16,5 @@ mixin dropdown(dropdownName, option)
             +dropdown-props__item(prop)
         when 'date'
           include __date/dropdown-date__date.pug
-          +dropdown-date__date()
+          +dropdown-date__date(option)
       +dropdown__control(option.id)
