--- a/src/dropdown/__date/dropdown-date__date.scss
+++ b/src/dropdown/__date/dropdown-date__date.scss
@@ -5,12 +5,13 @@
   padding-left: 11px;
   padding-right: 12px;
   border-top: 1px solid rgba(31, 32, 65, 0.5);
+  border-radius: 3px;
 }
 
 .dropdown__control-date {
-  padding-right: 8px;
+  padding: 8px;
   padding-top: 16px;
-  padding-bottom: 12px;
+  padding-bottom: 14px;
 }
 
 .datepicker {
@@ -67,7 +68,7 @@
   &--cell {
     padding-top: 20px;
     padding-bottom: 20px;
-    border-radius: 50px;
+    border-radius: 40px;
 
     font-family: Montserrat;
     font-style: normal;
@@ -76,6 +77,27 @@
     line-height: 15px;
 
     color: rgba(31, 32, 65, 0.5);
+
+    &.-selected- {
+      background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+      &.-focus- {
+        background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+      }
+    }
+    &.-focus- {
+      background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+    }
+    &.-range-from- {
+      border-radius: 40px 0px 0px 40px;
+    }
+    &.-range-to- {
+      border-radius: 0px 40px 40px 0px;
+    }
+    &.-in-range- {
+      background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+      opacity: 0.25
+    }
   }
 
 }
+  
