--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,13 @@ html(lang="en")
     h1 Webpack and pug
     br
     hr
+    +range-slider( 
+      { 
+        id: 'sumRange',
+        title: 'range slider'        
+      }
+    )
+    hr
     +dropdown('date dropdown',
       {
         id: 'propsDateRange',
