Restructured slider, add RangerSlider

--- a/src/index-components.pug
+++ b/src/index-components.pug
@@ -1,4 +1,4 @@
 include toggle/toggle.pug
 include text-field/text-field.pug
 include dropdown/dropdown.pug
-include range-slider/range-slider.pug
+include slider-bar/slider-bar.pug
