--- a/src/slider-bar/__range/slider-bar__range.scss
+++ b/src/slider-bar/__range/slider-bar__range.scss
@@ -1,6 +1,6 @@
 .slider-range {
   position: absolute;
-  left: 100px;
+  // left: 100px;
   width: 12px;
   height: 12px;
   border: 2px solid #FFFFFF;
@@ -8,10 +8,10 @@
   background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
   z-index: 2;
   &__from {
-    left: 100px;
+    left: 74px;
   }
   &__to {
-    left: 200px;
+    left: 159px;
   }
 
 }  
