--- a/src/slider-bar/slider-bar.scss
+++ b/src/slider-bar/slider-bar.scss
@@ -1,8 +1,9 @@
 
 .slider-bar {
-  margin-left: 100px;
-  max-width: 400px;
+  width: 100%;
+  box-sizing: border-box;
   .slider-head {
+    margin-top: 14px;
     display: flex;
     justify-content: space-between;
     &__title {
@@ -31,7 +32,7 @@
     align-items: center;
     width: 100%;
     height: 6px;
-    margin-top: 30px;
+    margin-top: 22px;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 3px;
     box-sizing: border-box;
