--- a/src/style.scss
+++ b/src/style.scss
@@ -1,2 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
+
+.slider-box {
+  width: 266px;
+  border: 0px solid grey;
+}
