Add button 'click me'

--- a/src/index-components.pug
+++ b/src/index-components.pug
@@ -2,3 +2,4 @@ include toggle/toggle.pug
 include text-field/text-field.pug
 include dropdown/dropdown.pug
 include slider-bar/slider-bar.pug
+include button-box/button-box.pug
