Добавил на кнопку класс со стрелкой - параметр arrow в index.pug

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,6 +16,7 @@ html(lang="en")
           title:'click me',
           hover: false,
           fill: true,
+          arrow: true
         })
     hr
     .slider-box
