--- a/src/slider-bar/__range/slider-bar__range.scss
+++ b/src/slider-bar/__range/slider-bar__range.scss
@@ -19,6 +19,7 @@
     position: absolute;
     width: 50px;
     height: 6px;
+    border-radius: 3px;
     background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
     z-index: 1;
   }
