--- a/src/slider-bar/__slider/slider-bar__slider.scss
+++ b/src/slider-bar/__slider/slider-bar__slider.scss
@@ -7,3 +7,12 @@
   border-radius: 10px;
   background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
 }
+
+.progress-bar {
+  position: absolute;
+  width: 50px;
+  height: 6px;
+  border-radius: 3px 3px 0px 0px;
+  background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+  z-index: 1;
+}
